k8/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
      - name: backend-api
        image: prodstorecr.azurecr.io/backend:latest
        ports:
        - containerPort: 80      
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: products-api
---
